<resources>
    <string name="app_name">BillPlease</string>
    <string name="amount">Amount</string>
    <string name="pax">Num of Pax</string>
    <string name="svsDisabled">NO SVS</string>
    <string name="svsEnabled">SVS</string>
    <string name="gstDisabled">NO GST</string>
    <string name="gstEnabled">GST</string>
    <string name="discount">Discount(%)</string>
    <string name="cash">Cash</string>
    <string name="paynow">PayNow</string>
    <string name="split">SPLIT</string>
    <string name="reset">RESET</string>
    <string name="totalBill">Total bill:</string>
    <string name="eachPays">Each pays:</string>
</resources>